k8s/overlays/prod/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 4
  template:
    spec:
      containers:
        - name: website
          image: ahmedsayedtalib/website:89f3cb7
