k8s/overlays/prod/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
spec:
  selector:
    app: website
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31115
