k8s/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
spec:
  tls:
    - hosts:
        - ahmedsayedtalib.com
      secretName: website-tls
  rules:
    - host: ahmedsayedtalib.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  number: 80
